@@ -1,3 +1,7 @@
+2015-10-27  Benno Schulenberg  <bensberg@justemail.net>
+	* src/move.c (do_next_word): Rewrite this function to use the same
+	logic as do_prev_word(), reducing its number of lines to half.
+
 2015-09-05  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (display_string, edit_draw): Force a redraw of a line
 	only when it contains a multicolumn character, to spare all regular
